--- a/snippets/package.json
+++ b/snippets/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^6.2.1",
     "next": "15.1.4",
     "prisma": "^6.2.1",
